Removed direct connection between sim and energy saver. This should go through PSM right?

--- a/Oblig1/TheRoomX3D2.MQTT.sim/.project
+++ b/Oblig1/TheRoomX3D2.MQTT.sim/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TheRoomX3D.MQTT.sim</name>
+	<name>TheRoomX3D2.MQTT.sim</name>
 	<comment></comment>
 	<projects>
 	</projects>
